added some apages but everything is missing now

--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <title>The Hero Association® </title>
-        <header class="header">
-            <nav class="header-nav">
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/">About Us</a></li>
-                <li><a href="/">Locations</a></li>
-            </ul>
-            </nav>
-            <img src="images/batman-silohuette.jpg" class="header-logo">
-        </header>
-        
-    </body>
-</html>
+---
+layout: default
+---
+ 
+   
+        <title>The Hero Association™</title>
+        <div class="full-hero">
+            <a href="/">with great power...<span class="hero-favicon">5</span></a>
+        </div>
+    
