--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 layout: default
 ---
  
-   
-        <title>The Hero Association™</title>
-        <div class="full-hero">
-            <a href="/">with great power...<span class="hero-favicon">5</span></a>
-        </div>
-    
+<!--    
+<title>The Hero Association™</title>
+<div class="full-hero">
+    <a href="/">with great power...<span class="hero-favicon">5</span></a>
+</div> -->
