made site visible from github

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
  
-<!--    
+   
 <title>The Hero Association™</title>
 <div class="full-hero">
-    <a href="/">with great power...<span class="hero-favicon">5</span></a>
-</div> -->
+    <a href="/great_responsibility/index.html">with great power...<span class="hero-favicon">5</span></a>
+</div>
