added about page and linked css from github instead of root to add css to mutiple pages

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@ layout: default
    
 <title>The Hero Association™</title>
 <div class="full-hero">
-    <a href="/great_responsibility/index.html">with great power...<span class="hero-favicon">5</span></a>
+    <div class="hero-image">
+        
+    </div>
+    
+</div>
+<div class="youth-association">
+   <a href="/"> <img src ="images/plain_clothes_static.jpg" alt="static shock"
+    class="youth-association-image"></a>
+
 </div>
